修改标题和底部说明

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   
-  <title>超越互动</title>
+  <title>成都超越互动网络科技有限公司</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description">
 <meta property="og:type" content="website">
@@ -142,7 +142,7 @@
   
   <div class="outer">
     <div id="footer-info" class="inner">
-      &copy; 2015 admin@chaoyuehudong.com<br>
+      成都超越互动网络科技有限公司 &copy; 2014-2015 Chaoyuehudong.com版权所有<br>
       Powered by <a href="http://hexo.io/" target="_blank">Hexo</a>
     </div>
   </div>
