--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div id="header-outer" class="outer">
     <div id="header-title" class="inner">
       <h1 id="logo-wrap">
-        <a href="/" id="logo">超越互动</a>
+        <a href="/" id="logo">成都超越互动网络科技有限公司</a>
       </h1>
       
     </div>
